--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -24,7 +24,7 @@ If you are very new to Shiny, we suggest you start with the [Mastering Shiny boo
 
 Ready to get started with complex Shiny App?
 
-## What is a complex Shiny Application? 
+## What is a complex Shiny Application? {#complex-shiny}
 
 > One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions
 
