--- a/index.Rmd
+++ b/index.Rmd
@@ -154,4 +154,6 @@ if (!requireNamespace("cloc")){
 knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
+try(file.copy("packages.bib", "docs/packages.bib"))
+try(file.copy("packages.bib", "docs/wip/packages.bib"))
 ```
