--- a/structure.Rmd
+++ b/structure.Rmd
@@ -2,6 +2,11 @@
 
 ## Shiny App as a Package
 
+```{r structure-0, include=FALSE}
+library(shiny)
+```
+
+
 In the next chapter you'll be introduced to the `{golem}` package, which is __an opinionated framework for building production-ready Shiny Applications__. 
 This framework starts by creating a package skeleton waiting to be filled. 
 
