Remove the use of memoise for rds files
- update travis.yml with new denomination

--- a/structure.Rmd
+++ b/structure.Rmd
@@ -2,6 +2,10 @@
 
 ## Shiny App as a Package
 
+```{r structure-0, include=FALSE}
+library(shiny)
+```
+
 A robust, maintenable and shareable Shiny application finds its way through a R package structure.
 
 In the next chapter you will be introduced to the `{golem}` package, which is __an opinionated framework for building production-ready Shiny Applications__. 
