dont eval shinyapps chunks

--- a/ux-matters.Rmd
+++ b/ux-matters.Rmd
@@ -498,7 +498,7 @@ shinyApp(ui, server)
 
 Note that if you need a more systemic way to do this, you can do it with the `{nter}` package:
 
-```{r ux-matters-4-bis}
+```{r ux-matters-4-bis, eval=FALSE}
 # Taken from https://github.com/JohnCoene/nter
 library(nter)
 library(shiny)
